package at.qe.skeleton.repositories;

import at.qe.skeleton.model.Rating;

public interface RatingRepository extends AbstractRepository<Rating, Long> {
}
